changed for lab 6
